# lambda-table-image-analysis

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
Docker/: docker-compose.yml
Docker/files/: Dockerfile.aws-runtime  Dockerfile.aws-sdk  Dockerfile.base  Dockerfile.boost  Dockerfile.googletest  Dockerfile.leptonica  Dockerfile.opencv  Dockerfile.tesseract
dockerfiles/: .dockerignore  Dockerfile
examples/: example01.sh  example02.sh
src/: Makefile  api.cpp  main.cpp
src/selen/: base64.cpp  base64.hpp  cell.cpp  cell.hpp  coordinate.cpp  coordinate.hpp  workspace.cpp  workspace.hpp
submodules/: .dockerignore  Dockerfile.build-lib
tests/: cell.cpp  coordinate.cpp  workspace.cpp
